deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stat
  labels:
    app: stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
        - name: stats
          image: ghcr.io/dankski/stats:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-login-secret  # Optional if your repo is private
