deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stats
spec:
  selector:
    app: stats
  ports:
      - port: 80
        targetPort: 8080
