deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stats-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: stats.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stats
                port:
                  number: 80
